#144 Mejoras de rendimiento