@@ -1,7 +1,5 @@
 package es.caib.rolsac2.rest.api.externa.v1.services;
 
-import es.caib.rolsac2.api.externa.v1.exception.DelegateException;
-import es.caib.rolsac2.api.externa.v1.exception.ExcepcionAplicacion;
 import es.caib.rolsac2.api.externa.v1.model.*;
 import es.caib.rolsac2.api.externa.v1.model.filters.FiltroServicios;
 import es.caib.rolsac2.api.externa.v1.model.respuestas.*;
@@ -27,6 +25,8 @@ import javax.validation.ValidationException;
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -35,51 +35,60 @@ import java.util.List;
 public class ServiciosResource {
 
     @EJB
-    private ProcedimientoServiceFacade servicioService;
+    ProcedimientoServiceFacade servicioService;
 
     @EJB
-    private SystemServiceFacade systemService;
+    SystemServiceFacade systemService;
 
     @EJB
-    private EntidadServiceFacade entidadService;
+    EntidadServiceFacade entidadService;
 
     /**
      * Metodo de tipo test para hacer una prueba que se llega a la url.
      *
-     * @return
-     * @throws DelegateException
+     * @return RespuestaServicios
+     * @throws ValidationException Manejo de excepciones
      */
     @GET
     @Path("/test")
     @Operation(operationId = "test", summary = "Test", description = "Test")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaServicios.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response test() throws DelegateException, ExcepcionAplicacion, ValidationException {
+    public Response test() throws ValidationException {
+
+        Instant start = Instant.now();
         List<Servicios> lista = new ArrayList<>();
-        Servicios elemento = null;
+        Servicios elemento;
         elemento = new Servicios();
-        elemento.setCodigo(1l);
+        elemento.setCodigo(1L);
         elemento.setNombre("nombre");
         lista.add(elemento);
         lista.add(elemento);
         lista.add(elemento);
-        RespuestaServicios resp = new RespuestaServicios(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(3), Long.valueOf(3), lista);
+
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+
+        RespuestaServicios resp = new RespuestaServicios(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(3), (long) (3), lista, tiempoMiliSegundos);
         return Response.ok(resp, MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Listado de Servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param lang   Código de idioma
+     * @param filtro Filtro de servicios
+     * @return Listado de Servicios
+     * @throws ValidationException Manejo de excepciones
      */
     @POST
     @Path("/")
     @Operation(operationId = "listarServicios", summary = "Lista los servicios", description = "Lista los servicios disponibles en funcion de los filtros")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaServicios.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response listarServicios(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(required = false, description = "Filtro de servicios: " + FiltroServicios.SAMPLE, name = "filtro", content = @Content(example = FiltroServicios.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroServicios.class))) FiltroServicios filtro) throws DelegateException, ExcepcionAplicacion, ValidationException {
+    public Response listarServicios(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro de servicios: " + FiltroServicios.SAMPLE, name = "filtro", content = @Content(example = FiltroServicios.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroServicios.class))) FiltroServicios filtro) throws ValidationException {
 
+        Instant start = Instant.now();
         if (filtro == null) {
             filtro = new FiltroServicios();
         }
@@ -107,22 +116,25 @@ public class ServiciosResource {
             fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
         }
 
-        return Response.ok(getRespuesta(fg, idiomaPorDefecto), MediaType.APPLICATION_JSON).build();
+        return Response.ok(getRespuesta(fg, idiomaPorDefecto, start), MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Listado de Servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param lang   Código de idioma
+     * @param filtro Filtro de servicios
+     * @return Listado de Servicios
+     * @throws ValidationException Manejo de excepciones
      */
     @POST
     @Path("/numTotal")
     @Operation(operationId = "numeroServicios", summary = "Devuelve el número total de servicios", description = "Devuelve el número total de servicios que se corresponden al filtro indicado")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaBase.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response numeroServicios(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro de servicios: " + FiltroServicios.SAMPLE, name = "filtro", content = @Content(example = FiltroServicios.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroServicios.class))) FiltroServicios filtro) throws DelegateException, ExcepcionAplicacion, ValidationException {
+    public Response numeroServicios(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro de servicios: " + FiltroServicios.SAMPLE, name = "filtro", content = @Content(example = FiltroServicios.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroServicios.class))) FiltroServicios filtro) throws ValidationException {
 
+        Instant start = Instant.now();
         if (filtro == null) {
             filtro = new FiltroServicios();
         }
@@ -152,7 +164,11 @@ public class ServiciosResource {
 
         Long total = servicioService.countByFiltro(fg);
 
-        RespuestaBase respuesta = new RespuestaBase(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(total.intValue()), total);
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+
+
+        RespuestaBase respuesta = new RespuestaBase(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(total.intValue()), total, tiempoMiliSegundos);
 
 
         return Response.ok(respuesta, MediaType.APPLICATION_JSON).build();
@@ -161,19 +177,18 @@ public class ServiciosResource {
     /**
      * Para obtener el enlace.
      *
-     * @param codigo
-     * @param lang
-     * @return
-     * @throws Exception
-     * @throws ValidationException
+     * @param codigo Código del servicio workflow
+     * @param lang   Código de idioma
+     * @return Enlace
+     * @throws ValidationException Manejo de excepciones
      */
     @POST
     @Path("/enlaceTelematico/{codigo}")
     @Operation(operationId = "getEnlaceTelematico", summary = "Obtiene enlace telematico", description = "Obtiene enlace telematico dado servicio")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaServicios.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response getEnlaceTelematico(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
-
+    public Response getEnlaceTelematico(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws ValidationException {
+        Instant start = Instant.now();
         final ProcedimientoFiltro fg = new ProcedimientoFiltro();
         fg.setCodigoWF(Long.valueOf(codigo));
 
@@ -187,24 +202,28 @@ public class ServiciosResource {
         final String url = servicioService.getEnlaceTelematicoByServicio(fg);
         RespuestaServicios respuesta = new RespuestaServicios();
         respuesta.setUrl(url);
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+        respuesta.setTiempo(tiempoMiliSegundos);
         return Response.ok(respuesta, MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Para obtener un servicio.
      *
-     * @return
-     * @throws Exception
-     * @Parameter idioma
-     * @Parameter id
+     * @param lang   Código de idioma
+     * @param codigo Código del servicio
+     * @return Servicio
+     * @throws Exception Manejo de excepciones
      */
     @POST
     @Path("/{codigo}")
     @Operation(operationId = "getPorId", summary = "Obtiene un servicio", description = "Obtiene el servicio con el código indicado")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaServicios.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response getPorId(@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
+    public Response getPorId(@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception {
 
+        Instant start = Instant.now();
         final ProcedimientoFiltro fg = new ProcedimientoFiltro();
         String idiomaPorDefecto = servicioService.obtenerIdiomaEntidad(Long.valueOf(codigo));
 
@@ -216,29 +235,33 @@ public class ServiciosResource {
         fg.setCodigoProc(Long.parseLong(codigo));
         fg.setTipo("S");
 
-        return Response.ok(getRespuesta(fg, idiomaPorDefecto), MediaType.APPLICATION_JSON).build();
+        return Response.ok(getRespuesta(fg, idiomaPorDefecto, start), MediaType.APPLICATION_JSON).build();
     }
 
 
-    private RespuestaServicios getRespuesta(final ProcedimientoFiltro filtro, String idiomaPorDefecto) throws DelegateException {
+    private RespuestaServicios getRespuesta(final ProcedimientoFiltro filtro, String idiomaPorDefecto, Instant start) {
         Pagina<ProcedimientoBaseDTO> resultadoBusqueda = servicioService.findProcedimientosByFiltroRest(filtro);
 
         List<Servicios> lista = new ArrayList<>();
-        Servicios elemento = null;
+        Servicios elemento;
 
         for (ProcedimientoBaseDTO nodo : resultadoBusqueda.getItems()) {
             elemento = new Servicios((ServicioDTO) nodo, null, filtro.getIdioma(), true, idiomaPorDefecto);
             lista.add(elemento);
         }
 
-        return new RespuestaServicios(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), Long.valueOf(resultadoBusqueda.getItems().size()), lista);
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+
+        return new RespuestaServicios(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), (long) (resultadoBusqueda.getItems().size()), lista, tiempoMiliSegundos);
     }
 
     /**
      * Listado de Publico Objetivo Entidad de servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param codigo Código del servicio workflow
+     * @param lang   Código de idioma
+     * @return Listado de Publico Objetivo Entidad de servicios
      */
     @Produces({MediaType.APPLICATION_JSON})
     @POST
@@ -247,14 +270,15 @@ public class ServiciosResource {
     @Operation(operationId = "listarPublicoObjetivoEntidad", summary = "Lista los tipos de público objetivo entidad del servicio", description = "Lista los tipos de público objetivo entidad del servicio dado por código workflow")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoPublicoObjetivoEntidad.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response listarPublicoObjetivoEntidad(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
+    public Response listarPublicoObjetivoEntidad(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) {
 
+        Instant start = Instant.now();
         List<TipoPublicoObjetivoEntidadDTO> result = new ArrayList<>();
         List<TipoPublicoObjetivoEntidad> lista = new ArrayList<>();
-        TipoPublicoObjetivoEntidad elemento = null;
+        TipoPublicoObjetivoEntidad elemento;
 
         if (codigo != null) {
-            result = servicioService.getTipoPubObjEntByCodProcWF(new Long(codigo));
+            result = servicioService.getTipoPubObjEntByCodProcWF(Long.valueOf(codigo));
 
             for (TipoPublicoObjetivoEntidadDTO nodo : result) {
                 elemento = new TipoPublicoObjetivoEntidad(nodo, null, lang, true);
@@ -262,14 +286,18 @@ public class ServiciosResource {
             }
         }
 
-        return Response.ok(new RespuestaTipoPublicoObjetivoEntidad(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+
+        return Response.ok(new RespuestaTipoPublicoObjetivoEntidad(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), (long) (result.size()), lista, tiempoMiliSegundos), MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Listado de normativas de servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param codigo Código del servicio workflow
+     * @param lang   Código de idioma
+     * @return Listado de normativas de servicios
      */
     @Produces({MediaType.APPLICATION_JSON})
     @POST
@@ -278,14 +306,15 @@ public class ServiciosResource {
     @Operation(operationId = "listarNormativas", summary = "Lista los normativas del servicio", description = "Lista los normativas del servicio dado por código workflow")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaNormativa.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response listarNormativas(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
+    public Response listarNormativas(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) {
 
+        Instant start = Instant.now();
         List<NormativaDTO> result = new ArrayList<>();
         List<Normativa> lista = new ArrayList<>();
-        Normativa elemento = null;
+        Normativa elemento;
 
         if (codigo != null) {
-            result = servicioService.getNormativasByCodProcWF(new Long(codigo));
+            result = servicioService.getNormativasByCodProcWF(Long.valueOf(codigo));
 
             for (NormativaDTO nodo : result) {
                 elemento = new Normativa(nodo, null, lang, true, null);
@@ -293,14 +322,18 @@ public class ServiciosResource {
             }
         }
 
-        return Response.ok(new RespuestaNormativa(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
+        Instant finish = Instant.now();
+        long tiempoSegundos = Duration.between(start, finish).toMillis();
+
+        return Response.ok(new RespuestaNormativa(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), (long) (result.size()), lista, tiempoSegundos), MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Listado de temas de servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param codigo Código del servicio workflow
+     * @param lang   Código de idioma
+     * @return Listado de temas de servicios
      */
     @Produces({MediaType.APPLICATION_JSON})
     @POST
@@ -309,14 +342,14 @@ public class ServiciosResource {
     @Operation(operationId = "listarTemas", summary = "Lista los temas del servicio", description = "Lista los temas del servicio dado por código workflow")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTema.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response listarTemas(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
-
+    public Response listarTemas(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) {
+        Instant start = Instant.now();
         List<TemaDTO> result = new ArrayList<>();
         List<Tema> lista = new ArrayList<>();
-        Tema elemento = null;
+        Tema elemento;
 
         if (codigo != null) {
-            result = servicioService.getTemasByCodProcWF(new Long(codigo));
+            result = servicioService.getTemasByCodProcWF(Long.valueOf(codigo));
 
             for (TemaDTO nodo : result) {
                 elemento = new Tema(nodo, null, lang, true);
@@ -324,14 +357,18 @@ public class ServiciosResource {
             }
         }
 
-        return Response.ok(new RespuestaTema(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
+        Instant finish = Instant.now();
+        long tiempoSegundos = Duration.between(start, finish).toMillis();
+
+        return Response.ok(new RespuestaTema(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), (long) (result.size()), lista, tiempoSegundos), MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Listado de documentos de servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param codigo Código del servicio workflow
+     * @param lang   Código de idioma
+     * @return Listado de documentos de servicios
      */
     @Produces({MediaType.APPLICATION_JSON})
     @POST
@@ -340,29 +377,34 @@ public class ServiciosResource {
     @Operation(operationId = "listarDocumentos", summary = "Lista los documentos del servicio", description = "Lista los documentos del servicio dado por código workflow")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaProcedimientoDocumento.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response listarDocumentos(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
+    public Response listarDocumentos(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) {
 
+        Instant start = Instant.now();
         List<ProcedimientoDocumentoDTO> result = new ArrayList<>();
         List<ProcedimientoDocumento> lista = new ArrayList<>();
-        ProcedimientoDocumento elemento = null;
+        ProcedimientoDocumento elemento;
 
         if (codigo != null) {
-            result = servicioService.getDocumentosByCodProcWF(new Long(codigo));
+            result = servicioService.getDocumentosByCodProcWF(Long.valueOf(codigo));
 
             for (ProcedimientoDocumentoDTO nodo : result) {
                 elemento = new ProcedimientoDocumento(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), lang, true);
                 lista.add(elemento);
             }
         }
+        Instant finish = Instant.now();
+        long tiempoSegundos = Duration.between(start, finish).toMillis();
 
-        return Response.ok(new RespuestaProcedimientoDocumento(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
+
+        return Response.ok(new RespuestaProcedimientoDocumento(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), (long) (result.size()), lista, tiempoSegundos), MediaType.APPLICATION_JSON).build();
     }
 
     /**
      * Listado de documentos LOPD de servicios.
      *
-     * @return
-     * @throws DelegateException
+     * @param codigo Código del servicio workflow
+     * @param lang   Código de idioma
+     * @return Listado de documentos LOPD de servicios
      */
     @Produces({MediaType.APPLICATION_JSON})
     @POST
@@ -371,14 +413,15 @@ public class ServiciosResource {
     @Operation(operationId = "listarDocumentosLopd", summary = "Lista los documentos LOPD del servicio", description = "Lista los documentos LOPD del servicio dado por código workflow")
     @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaProcedimientoDocumento.class)))
     @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    public Response listarDocumentosLopd(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) throws Exception, ValidationException {
+    public Response listarDocumentosLopd(@Parameter(description = "Código servicio workflow", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo, @Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang) {
 
+        Instant start = Instant.now();
         List<ProcedimientoDocumentoDTO> result = new ArrayList<>();
         List<ProcedimientoDocumento> lista = new ArrayList<>();
-        ProcedimientoDocumento elemento = null;
+        ProcedimientoDocumento elemento;
 
         if (codigo != null) {
-            result = servicioService.getDocumentosLOPDByCodProcWF(new Long(codigo));
+            result = servicioService.getDocumentosLOPDByCodProcWF(Long.valueOf(codigo));
 
             for (ProcedimientoDocumentoDTO nodo : result) {
                 elemento = new ProcedimientoDocumento(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), lang, true);
@@ -386,223 +429,10 @@ public class ServiciosResource {
             }
         }
 
-        return Response.ok(new RespuestaProcedimientoDocumento(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    }
+        Instant finish = Instant.now();
+        long tiempoSegundos = Duration.between(start, finish).toMillis();
 
-    //	/**
-    //	 * Listado de Publico Objetivo Entidad de servicios.
-    //	 *
-    //	 * @return
-    //	 * @throws DelegateException
-    //	 */
-    //	@Produces({ MediaType.APPLICATION_JSON })
-    //	@POST
-    //	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-    //	@Path("/publicoObjetivoEntidad/{codigo}")
-    //	@Operation(operationId = "listarPublicoObjetivoEntidad", summary = "Lista los tipos de público objetivo entidad del servicio", description = "Lista los tipos de público objetivo entidad del servicio dado por código")
-    //	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoPublicoObjetivoEntidad.class)))
-    //	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    //	public Response listarPublicoObjetivoEntidad(
-    //			@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo,
-    //			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-    //			@Parameter(description = "Estado workflow (D=Definitivo, M=Modificado, T=Todos (publicado o modificado), A=Ambos (publicado y modificado))", name = "estadoWF", in = ParameterIn.QUERY) @DefaultValue(Constantes.ESTADOWF_DEFECTO) @QueryParam("estadoWF") final String estadoWF)
-    //			throws Exception, ValidationException {
-    //
-    //		List<TipoPublicoObjetivoEntidadDTO> result = new ArrayList<>();
-    //		List<TipoPublicoObjetivoEntidad> lista = new ArrayList<>();
-    //		TipoPublicoObjetivoEntidad elemento = null;
-    //
-    //		if (codigo != null) {
-    //			result = servicioService.getTipoPubObjEntByProc(new Long(codigo), estadoWF);
-    //
-    //			for (TipoPublicoObjetivoEntidadDTO nodo : result) {
-    //				elemento = new TipoPublicoObjetivoEntidad(nodo, null, lang, true);
-    //				lista.add(elemento);
-    //			}
-    //		}
-    //
-    //		return Response.ok(new RespuestaTipoPublicoObjetivoEntidad(Response.Status.OK.getStatusCode() + "",
-    //				Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    //	}
-    //
-    //	/**
-    //	 * Listado de materias de servicios.
-    //	 *
-    //	 * @return
-    //	 * @throws DelegateException
-    //	 */
-    //	@Produces({ MediaType.APPLICATION_JSON })
-    //	@POST
-    //	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-    //	@Path("/materiasSia/{codigo}")
-    //	@Operation(operationId = "listarMateriasSia", summary = "Lista los tipos de materias SIA del servicio", description = "Lista los tipos de de materias SIA del servicio dado por código")
-    //	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoMateriaSia.class)))
-    //	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    //	public Response listarMateriasSia(
-    //			@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo,
-    //			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-    //			@Parameter(description = "Estado workflow (D=Definitivo, M=Modificado, T=Todos (publicado o modificado), A=Ambos (publicado y modificado))", name = "estadoWF", in = ParameterIn.QUERY) @DefaultValue(Constantes.ESTADOWF_DEFECTO) @QueryParam("estadoWF") final String estadoWF)
-    //			throws Exception, ValidationException {
-    //
-    //		List<TipoMateriaSIADTO> result = new ArrayList<>();
-    //		List<TipoMateriaSia> lista = new ArrayList<>();
-    //		TipoMateriaSia elemento = null;
-    //
-    //		if (codigo != null) {
-    //			result = servicioService.getTipoMateriaByProc(new Long(codigo), estadoWF);
-    //
-    //			for (TipoMateriaSIADTO nodo : result) {
-    //				elemento = new TipoMateriaSia(nodo, null, lang, true);
-    //				lista.add(elemento);
-    //			}
-    //		}
-    //
-    //		return Response.ok(new RespuestaTipoMateriaSia(Response.Status.OK.getStatusCode() + "",
-    //				Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    //	}
-    //
-    //	/**
-    //	 * Listado de normativas de servicios.
-    //	 *
-    //	 * @return
-    //	 * @throws DelegateException
-    //	 */
-    //	@Produces({ MediaType.APPLICATION_JSON })
-    //	@POST
-    //	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-    //	@Path("/normativas/{codigo}")
-    //	@Operation(operationId = "listarNormativas", summary = "Lista los normativas del servicio", description = "Lista los normativas del servicio dado por código")
-    //	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaNormativa.class)))
-    //	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    //	public Response listarNormativas(
-    //			@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo,
-    //			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-    //			@Parameter(description = "Estado workflow (D=Definitivo, M=Modificado, T=Todos (publicado o modificado), A=Ambos (publicado y modificado))", name = "estadoWF", in = ParameterIn.QUERY) @DefaultValue(Constantes.ESTADOWF_DEFECTO) @QueryParam("estadoWF") final String estadoWF)
-    //			throws Exception, ValidationException {
-    //
-    //		List<NormativaDTO> result = new ArrayList<>();
-    //		List<Normativa> lista = new ArrayList<>();
-    //		Normativa elemento = null;
-    //
-    //		if (codigo != null) {
-    //			result = servicioService.getNormativasByProc(new Long(codigo), estadoWF);
-    //
-    //			for (NormativaDTO nodo : result) {
-    //				elemento = new Normativa(nodo, null, lang, true);
-    //				lista.add(elemento);
-    //			}
-    //		}
-    //
-    //		return Response.ok(new RespuestaNormativa(Response.Status.OK.getStatusCode() + "",
-    //				Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    //	}
-    //
-    //	/**
-    //	 * Listado de temas de servicios.
-    //	 *
-    //	 * @return
-    //	 * @throws DelegateException
-    //	 */
-    //	@Produces({ MediaType.APPLICATION_JSON })
-    //	@POST
-    //	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-    //	@Path("/temas/{codigo}")
-    //	@Operation(operationId = "listarTemas", summary = "Lista los temas del servicio", description = "Lista los temas del servicio dado por código")
-    //	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTema.class)))
-    //	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    //	public Response listarTemas(
-    //			@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo,
-    //			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-    //			@Parameter(description = "Estado workflow (D=Definitivo, M=Modificado, T=Todos (publicado o modificado), A=Ambos (publicado y modificado))", name = "estadoWF", in = ParameterIn.QUERY) @DefaultValue(Constantes.ESTADOWF_DEFECTO) @QueryParam("estadoWF") final String estadoWF)
-    //			throws Exception, ValidationException {
-    //
-    //		List<TemaDTO> result = new ArrayList<>();
-    //		List<Tema> lista = new ArrayList<>();
-    //		Tema elemento = null;
-    //
-    //		if (codigo != null) {
-    //			result = servicioService.getTemasByProc(new Long(codigo), estadoWF);
-    //
-    //			for (TemaDTO nodo : result) {
-    //				elemento = new Tema(nodo, null, lang, true);
-    //				lista.add(elemento);
-    //			}
-    //		}
-    //
-    //		return Response.ok(new RespuestaTema(Response.Status.OK.getStatusCode() + "",
-    //				Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    //	}
-    //
-    //	/**
-    //	 * Listado de documentos de servicios.
-    //	 *
-    //	 * @return
-    //	 * @throws DelegateException
-    //	 */
-    //	@Produces({ MediaType.APPLICATION_JSON })
-    //	@POST
-    //	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-    //	@Path("/documentos/{codigo}")
-    //	@Operation(operationId = "listarDocumentos", summary = "Lista los documentos del servicio", description = "Lista los documentos del servicio dado por código")
-    //	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaProcedimientoDocumento.class)))
-    //	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    //	public Response listarDocumentos(
-    //			@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo,
-    //			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-    //			@Parameter(description = "Estado workflow (D=Definitivo, M=Modificado, T=Todos (publicado o modificado), A=Ambos (publicado y modificado))", name = "estadoWF", in = ParameterIn.QUERY) @DefaultValue(Constantes.ESTADOWF_DEFECTO) @QueryParam("estadoWF") final String estadoWF)
-    //			throws Exception, ValidationException {
-    //
-    //		List<ProcedimientoDocumentoDTO> result = new ArrayList<>();
-    //		List<ProcedimientoDocumento> lista = new ArrayList<>();
-    //		ProcedimientoDocumento elemento = null;
-    //
-    //		if (codigo != null) {
-    //			result = servicioService.getDocumentosByProc(new Long(codigo), estadoWF);
-    //
-    //			for (ProcedimientoDocumentoDTO nodo : result) {
-    //				elemento = new ProcedimientoDocumento(nodo, null, lang, true);
-    //				lista.add(elemento);
-    //			}
-    //		}
-    //
-    //		return Response.ok(new RespuestaProcedimientoDocumento(Response.Status.OK.getStatusCode() + "",
-    //				Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    //	}
-    //
-    //	/**
-    //	 * Listado de documentos LOPD de servicios.
-    //	 *
-    //	 * @return
-    //	 * @throws DelegateException
-    //	 */
-    //	@Produces({ MediaType.APPLICATION_JSON })
-    //	@POST
-    //	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-    //	@Path("/documentosLopd/{codigo}")
-    //	@Operation(operationId = "listarDocumentosLopd", summary = "Lista los documentos LOPD del servicio", description = "Lista los documentos LOPD del servicio dado por código")
-    //	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaProcedimientoDocumento.class)))
-    //	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-    //	public Response listarDocumentosLopd(
-    //			@Parameter(description = "Código servicio", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo,
-    //			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-    //			@Parameter(description = "Estado workflow (D=Definitivo, M=Modificado, T=Todos (publicado o modificado), A=Ambos (publicado y modificado))", name = "estadoWF", in = ParameterIn.QUERY) @DefaultValue(Constantes.ESTADOWF_DEFECTO) @QueryParam("estadoWF") final String estadoWF)
-    //			throws Exception, ValidationException {
-    //
-    //		List<ProcedimientoDocumentoDTO> result = new ArrayList<>();
-    //		List<ProcedimientoDocumento> lista = new ArrayList<>();
-    //		ProcedimientoDocumento elemento = null;
-    //
-    //		if (codigo != null) {
-    //			result = servicioService.getDocumentosLOPDByProc(new Long(codigo), estadoWF);
-    //
-    //			for (ProcedimientoDocumentoDTO nodo : result) {
-    //				elemento = new ProcedimientoDocumento(nodo, null, lang, true);
-    //				lista.add(elemento);
-    //			}
-    //		}
-    //
-    //		return Response.ok(new RespuestaProcedimientoDocumento(Response.Status.OK.getStatusCode() + "",
-    //				Constantes.mensaje200(lista.size()), new Long(result.size()), lista), MediaType.APPLICATION_JSON).build();
-    //	}
+        return Response.ok(new RespuestaProcedimientoDocumento(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), (long) (result.size()), lista, tiempoSegundos), MediaType.APPLICATION_JSON).build();
+    }
 
 }
