@@ -1,35 +1,10 @@
 package es.caib.rolsac2.rest.api.externa.v1.services;
 
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.ejb.EJB;
-import javax.validation.ValidationException;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-
-import es.caib.rolsac2.api.externa.v1.exception.DelegateException;
-import es.caib.rolsac2.api.externa.v1.exception.ExcepcionAplicacion;
-import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaError;
-import es.caib.rolsac2.api.externa.v1.utils.Constantes;
-import org.eclipse.microprofile.openapi.annotations.Operation;
-import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
-import org.eclipse.microprofile.openapi.annotations.media.Content;
-import org.eclipse.microprofile.openapi.annotations.media.Schema;
-import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
-import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
-import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
-import org.eclipse.microprofile.openapi.annotations.tags.Tag;
-
 import es.caib.rolsac2.api.externa.v1.model.Tema;
 import es.caib.rolsac2.api.externa.v1.model.filters.FiltroTema;
+import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaError;
 import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaTema;
+import es.caib.rolsac2.api.externa.v1.utils.Constantes;
 import es.caib.rolsac2.service.facade.EntidadServiceFacade;
 import es.caib.rolsac2.service.facade.SystemServiceFacade;
 import es.caib.rolsac2.service.facade.TemaServiceFacade;
@@ -39,115 +14,130 @@ import es.caib.rolsac2.service.model.TemaDTO;
 import es.caib.rolsac2.service.model.filtro.EntidadFiltro;
 import es.caib.rolsac2.service.model.filtro.TemaFiltro;
 import es.caib.rolsac2.service.model.types.TypePropiedadConfiguracion;
+import org.eclipse.microprofile.openapi.annotations.Operation;
+import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
+import org.eclipse.microprofile.openapi.annotations.media.Content;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
+import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
+import org.eclipse.microprofile.openapi.annotations.tags.Tag;
+
+import javax.ejb.EJB;
+import javax.validation.ValidationException;
+import javax.ws.rs.*;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
 
 @Path(Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_TEMAS)
 @Tag(description = Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_TEMAS, name = Constantes.ENTIDAD_TEMAS)
 public class TemaResource {
 
-	@EJB
-	private TemaServiceFacade temaService;
+    @EJB
+    TemaServiceFacade temaService;
 
-	@EJB
-	private SystemServiceFacade systemService;
+    @EJB
+    SystemServiceFacade systemService;
 
-	@EJB
-	private EntidadServiceFacade entidadService;
+    @EJB
+    EntidadServiceFacade entidadService;
 
-	/**
-	 * Listado de temas.
-	 *
-	 * @return
-	 * @throws DelegateException
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/")
-	@Operation(operationId = "listar", summary = "Lista las temas", description = "Lista las temas disponibles en funcion de los filtros")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTema.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response listar(
-			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-			@RequestBody(description = "Filtro de temas: "
-					+ FiltroTema.SAMPLE, name = "filtro", content = @Content(example = FiltroTema.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTema.class))) FiltroTema filtro)
-			throws DelegateException, ExcepcionAplicacion, ValidationException {
+    /**
+     * Listado de temas.
+     *
+     * @param lang   Código de idioma
+     * @param filtro Filtro de temas
+     * @return Listado de temas
+     * @throws ValidationException Manejo de excepciones
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/")
+    @Operation(operationId = "listar", summary = "Lista las temas", description = "Lista las temas disponibles en funcion de los filtros")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTema.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response listar(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro de temas: " + FiltroTema.SAMPLE, name = "filtro", content = @Content(example = FiltroTema.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTema.class))) FiltroTema filtro) throws ValidationException {
 
-		if (filtro == null) {
-			filtro = new FiltroTema();
-		}
+        Instant start = Instant.now();
+        if (filtro == null) {
+            filtro = new FiltroTema();
+        }
 
-		TemaFiltro fg = filtro.toTemaFiltro();
+        TemaFiltro fg = filtro.toTemaFiltro();
 
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else if(filtro.getIdEntidad() != null) {
-			EntidadFiltro filtroEntidad = new EntidadFiltro();
-			filtroEntidad.setCodigo(filtro.getIdEntidad());
-			Pagina<EntidadDTO> resultadoBusqueda = entidadService.findByFiltroRest(filtroEntidad);
-			if(resultadoBusqueda.getTotal() > 0 && resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest() != null && !resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest().isEmpty()) {
-				fg.setIdioma(resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest());
-			} else {
-				fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-			}
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else if (filtro.getIdEntidad() != null) {
+            EntidadFiltro filtroEntidad = new EntidadFiltro();
+            filtroEntidad.setCodigo(filtro.getIdEntidad());
+            Pagina<EntidadDTO> resultadoBusqueda = entidadService.findByFiltroRest(filtroEntidad);
+            if (resultadoBusqueda.getTotal() > 0 && resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest() != null && !resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest().isEmpty()) {
+                fg.setIdioma(resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest());
+            } else {
+                fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+            }
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		// si no vienen los filtros se completan con los datos por defecto
-		if(filtro.getFiltroPaginacion() != null) {
-			fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
-			fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
-		}
+        // si no vienen los filtros se completan con los datos por defecto
+        if (filtro.getFiltroPaginacion() != null) {
+            fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
+            fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	/**
-	 * Para obtener un tema.
-	 *
-	 * @param idioma
-	 * @param id
-	 * @return
-	 * @throws Exception
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/{codigo}")
-	@Operation(operationId = "getPorId", summary = "Obtiene un tema", description = "Obtiene La tema con el código indicado")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTema.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response getPorId(
-			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-			@Parameter(description = "Código tema", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo
-			)
-			throws Exception, ValidationException {
+    /**
+     * Para obtener un tema.
+     *
+     * @param lang   Código de idioma
+     * @param codigo Código tema
+     * @return Devuelve el tema
+     * @throws Exception Manejo de excepciones
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/{codigo}")
+    @Operation(operationId = "getPorId", summary = "Obtiene un tema", description = "Obtiene La tema con el código indicado")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTema.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response getPorId(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @Parameter(description = "Código tema", name = "codigo", required = true, in = ParameterIn.PATH) @PathParam("codigo") final String codigo) throws Exception {
 
-		TemaFiltro fg = new TemaFiltro();
+        Instant start = Instant.now();
+        TemaFiltro fg = new TemaFiltro();
 
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
-		fg.setCodigo(new Long(codigo));
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
+        fg.setCodigo(Long.valueOf(codigo));
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	private RespuestaTema getRespuesta(TemaFiltro filtro) throws DelegateException {
-		Pagina<TemaDTO> resultadoBusqueda = temaService.findByFiltroRest(filtro);
+    private RespuestaTema getRespuesta(TemaFiltro filtro, Instant start) {
+        Pagina<TemaDTO> resultadoBusqueda = temaService.findByFiltroRest(filtro);
 
-		List<Tema> lista = new ArrayList<>();
-		Tema elemento = null;
+        List<Tema> lista = new ArrayList<>();
+        Tema elemento;
 
-		for (TemaDTO nodo : resultadoBusqueda.getItems()) {
-			elemento = new Tema(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), filtro.getIdioma(), true);
-			lista.add(elemento);
-		}
+        for (TemaDTO nodo : resultadoBusqueda.getItems()) {
+            elemento = new Tema(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), filtro.getIdioma(), true);
+            lista.add(elemento);
+        }
 
-		return new RespuestaTema(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()),
-				resultadoBusqueda.getTotal(), lista);
-	}
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+        return new RespuestaTema(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), resultadoBusqueda.getTotal(), lista, tiempoMiliSegundos);
+    }
 
 }
