@@ -1,23 +1,16 @@
 package es.caib.rolsac2.rest.api.externa.v1.services;
 
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.ejb.EJB;
-import javax.validation.ValidationException;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-
-import es.caib.rolsac2.api.externa.v1.exception.DelegateException;
-import es.caib.rolsac2.api.externa.v1.exception.ExcepcionAplicacion;
+import es.caib.rolsac2.api.externa.v1.model.TipoAfectacion;
+import es.caib.rolsac2.api.externa.v1.model.filters.FiltroTipoAfectacion;
 import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaError;
 import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaTipoAfectacion;
+import es.caib.rolsac2.api.externa.v1.utils.Constantes;
+import es.caib.rolsac2.service.facade.MaestrasSupServiceFacade;
+import es.caib.rolsac2.service.facade.SystemServiceFacade;
+import es.caib.rolsac2.service.model.Pagina;
+import es.caib.rolsac2.service.model.TipoAfectacionDTO;
+import es.caib.rolsac2.service.model.filtro.TipoAfectacionFiltro;
+import es.caib.rolsac2.service.model.types.TypePropiedadConfiguracion;
 import org.eclipse.microprofile.openapi.annotations.Operation;
 import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
@@ -27,123 +20,122 @@ import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
 import org.eclipse.microprofile.openapi.annotations.tags.Tag;
 
-import es.caib.rolsac2.api.externa.v1.model.TipoAfectacion;
-import es.caib.rolsac2.api.externa.v1.model.filters.FiltroTipoAfectacion;
-import es.caib.rolsac2.api.externa.v1.utils.Constantes;
-import es.caib.rolsac2.service.facade.MaestrasSupServiceFacade;
-import es.caib.rolsac2.service.facade.SystemServiceFacade;
-import es.caib.rolsac2.service.model.Pagina;
-import es.caib.rolsac2.service.model.TipoAfectacionDTO;
-import es.caib.rolsac2.service.model.filtro.TipoAfectacionFiltro;
-import es.caib.rolsac2.service.model.types.TypePropiedadConfiguracion;
+import javax.ejb.EJB;
+import javax.validation.ValidationException;
+import javax.ws.rs.*;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
 
 @Path(Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_TIPO_AFECTACION)
 @Tag(description = Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_TIPO_AFECTACION, name = Constantes.ENTIDAD_TIPO_AFECTACION)
 public class TipoAfectacionResource {
 
-	@EJB
-	private MaestrasSupServiceFacade tipoAfectacionService;
+    @EJB
+    MaestrasSupServiceFacade tipoAfectacionService;
 
-	@EJB
-	private SystemServiceFacade systemService;
+    @EJB
+    SystemServiceFacade systemService;
 
-	/**
-	 * Listado de TiposAfectacion.
-	 *
-	 * @return
-	 * @throws DelegateException
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({MediaType.APPLICATION_JSON , MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/")
-	@Operation(operationId = "listarTiposAfectacion", summary = "Lista de tipos de afectación", description = "Lista todos los tipos de afectación disponibles")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoAfectacion.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response listarTiposAfectacion(
-	@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-	@RequestBody(description = "Filtro: " + FiltroTipoAfectacion.SAMPLE, name = "filtro", content = @Content(example = FiltroTipoAfectacion.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTipoAfectacion.class))) FiltroTipoAfectacion filtro)
-			throws DelegateException, ExcepcionAplicacion, ValidationException {
+    /**
+     * Listado de TiposAfectacion.
+     *
+     * @param lang Código de idioma
+     * @return Listado de TiposAfectacion
+     * @throws ValidationException Manejo de excepciones
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/")
+    @Operation(operationId = "listarTiposAfectacion", summary = "Lista de tipos de afectación", description = "Lista todos los tipos de afectación disponibles")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoAfectacion.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response listarTiposAfectacion(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro: " + FiltroTipoAfectacion.SAMPLE, name = "filtro", content = @Content(example = FiltroTipoAfectacion.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTipoAfectacion.class))) FiltroTipoAfectacion filtro) throws ValidationException {
 
-		if (filtro == null) {
-			filtro = new FiltroTipoAfectacion();
-		}
+        Instant start = Instant.now();
+        if (filtro == null) {
+            filtro = new FiltroTipoAfectacion();
+        }
 
-		TipoAfectacionFiltro fg = filtro.toTipoAfectacionFiltro();
+        TipoAfectacionFiltro fg = filtro.toTipoAfectacionFiltro();
 
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		// si no vienen los filtros se completan con los datos por defecto
-		if(filtro.getFiltroPaginacion() != null) {
-			fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
-			fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
-		}
+        // si no vienen los filtros se completan con los datos por defecto
+        if (filtro.getFiltroPaginacion() != null) {
+            fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
+            fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	/**
-	 * Para obtener el idioma.
-	 *
-	 * @param idioma
-	 * @param id
-	 * @return
-	 * @throws Exception
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({ MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/{codigo}")
-	@Operation(operationId = "getTipoAfectacion", summary = "Obtiene un tipo de afectación", description = "Obtiene el tipo de afectación con el id(código) indicado")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoAfectacion.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response getTipoAfectacion(
-			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-			@Parameter(description = "Código de tipo de afectación", required = true, name = "codigo", in = ParameterIn.PATH) @PathParam("codigo") final String codigo)
-			throws Exception, ValidationException {
+    /**
+     * Para obtener el idioma.
+     *
+     * @param codigo Código del tipo de afectación
+     * @param lang   Código de idioma
+     * @return Tipo de afectación
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/{codigo}")
+    @Operation(operationId = "getTipoAfectacion", summary = "Obtiene un tipo de afectación", description = "Obtiene el tipo de afectación con el id(código) indicado")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoAfectacion.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response getTipoAfectacion(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @Parameter(description = "Código de tipo de afectación", required = true, name = "codigo", in = ParameterIn.PATH) @PathParam("codigo") final String codigo) {
 
-		TipoAfectacionFiltro fg = new TipoAfectacionFiltro();
-		fg.setCodigo(new Long(codigo));
+        Instant start = Instant.now();
+        TipoAfectacionFiltro fg = new TipoAfectacionFiltro();
+        fg.setCodigo(Long.valueOf(codigo));
 
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	private RespuestaTipoAfectacion getRespuesta(TipoAfectacionFiltro fg) throws DelegateException {
-		Pagina<TipoAfectacionDTO> resultadoBusqueda = tipoAfectacionService.findByFiltroRest(fg);
+    private RespuestaTipoAfectacion getRespuesta(TipoAfectacionFiltro fg, Instant start) {
+        Pagina<TipoAfectacionDTO> resultadoBusqueda = tipoAfectacionService.findByFiltroRest(fg);
 
-		List<TipoAfectacion> lista = new ArrayList<TipoAfectacion>();
-		TipoAfectacion elemento = null;
+        List<TipoAfectacion> lista = new ArrayList<>();
+        TipoAfectacion elemento;
 
-		for (TipoAfectacionDTO nodo : resultadoBusqueda.getItems()) {
-			elemento = new TipoAfectacion(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), fg.getIdioma(), true);
-			lista.add(elemento);
-		}
+        for (TipoAfectacionDTO nodo : resultadoBusqueda.getItems()) {
+            elemento = new TipoAfectacion(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), fg.getIdioma(), true);
+            lista.add(elemento);
+        }
 
-		return new RespuestaTipoAfectacion(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()),
-				resultadoBusqueda.getTotal(), lista);
-	}
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
 
-//	private RespuestaTipoAfectacion getRespuestaSimple(TipoAfectacionFiltro fg) throws DelegateException {
-//		TipoAfectacionDTO resultadoBusqueda = tipoAfectacionService.findTipoAfectacionById(fg.getIdEntidad());
-//
-//		List<TipoAfectacion> lista = new ArrayList<TipoAfectacion>();
-//
-//		if (resultadoBusqueda != null) {
-//			lista.add(new TipoAfectacion(resultadoBusqueda, null, fg.getIdioma(), true));
-//		}
-//
-//		return new RespuestaTipoAfectacion(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), 1,
-//				lista);
-//	}
+
+        return new RespuestaTipoAfectacion(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), resultadoBusqueda.getTotal(), lista, tiempoMiliSegundos);
+    }
+
+    //	private RespuestaTipoAfectacion getRespuestaSimple(TipoAfectacionFiltro fg) throws DelegateException {
+    //		TipoAfectacionDTO resultadoBusqueda = tipoAfectacionService.findTipoAfectacionById(fg.getIdEntidad());
+    //
+    //		List<TipoAfectacion> lista = new ArrayList<TipoAfectacion>();
+    //
+    //		if (resultadoBusqueda != null) {
+    //			lista.add(new TipoAfectacion(resultadoBusqueda, null, fg.getIdioma(), true));
+    //		}
+    //
+    //		return new RespuestaTipoAfectacion(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), 1,
+    //				lista);
+    //	}
 
 }
