@@ -1,33 +1,8 @@
 package es.caib.rolsac2.rest.api.externa.v1.services;
 
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.ejb.EJB;
-import javax.validation.ValidationException;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-
-import es.caib.rolsac2.api.externa.v1.exception.DelegateException;
-import es.caib.rolsac2.api.externa.v1.exception.ExcepcionAplicacion;
-import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaError;
-import org.eclipse.microprofile.openapi.annotations.Operation;
-import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
-import org.eclipse.microprofile.openapi.annotations.media.Content;
-import org.eclipse.microprofile.openapi.annotations.media.Schema;
-import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
-import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
-import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
-import org.eclipse.microprofile.openapi.annotations.tags.Tag;
-
 import es.caib.rolsac2.api.externa.v1.model.TipoProcedimiento;
 import es.caib.rolsac2.api.externa.v1.model.filters.FiltroTipoProcedimiento;
+import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaError;
 import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaTipoProcedimiento;
 import es.caib.rolsac2.api.externa.v1.utils.Constantes;
 import es.caib.rolsac2.service.facade.EntidadServiceFacade;
@@ -39,112 +14,129 @@ import es.caib.rolsac2.service.model.TipoProcedimientoDTO;
 import es.caib.rolsac2.service.model.filtro.EntidadFiltro;
 import es.caib.rolsac2.service.model.filtro.TipoProcedimientoFiltro;
 import es.caib.rolsac2.service.model.types.TypePropiedadConfiguracion;
+import org.eclipse.microprofile.openapi.annotations.Operation;
+import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
+import org.eclipse.microprofile.openapi.annotations.media.Content;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
+import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
+import org.eclipse.microprofile.openapi.annotations.tags.Tag;
+
+import javax.ejb.EJB;
+import javax.validation.ValidationException;
+import javax.ws.rs.*;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
 
 @Path(Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_TIPO_PROCEDIMIENTO)
 @Tag(description = Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_TIPO_PROCEDIMIENTO, name = Constantes.ENTIDAD_TIPO_PROCEDIMIENTO)
 public class TipoProcedimientoResource {
 
-	@EJB
-	private MaestrasSupServiceFacade tipoProcedimientoService;
+    @EJB
+    MaestrasSupServiceFacade tipoProcedimientoService;
 
-	@EJB
-	private SystemServiceFacade systemService;
+    @EJB
+    SystemServiceFacade systemService;
 
-	@EJB
-	private EntidadServiceFacade entidadService;
+    @EJB
+    EntidadServiceFacade entidadService;
 
-	/**
-	 * Listado de TiposProcedimiento.
-	 *
-	 * @return
-	 * @throws DelegateException
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({MediaType.APPLICATION_JSON , MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/")
-	@Operation(operationId = "listarTiposProcedimiento", summary = "Lista de tipos de procedimiento", description = "Lista todos los tipos de procedimiento disponibles")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoProcedimiento.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response listarTiposProcedimiento(
-	@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-	@RequestBody(description = "Filtro: " + FiltroTipoProcedimiento.SAMPLE, name = "filtro", content = @Content(example = FiltroTipoProcedimiento.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTipoProcedimiento.class))) FiltroTipoProcedimiento filtro)
-			throws DelegateException, ExcepcionAplicacion, ValidationException {
+    /**
+     * Listado de TiposProcedimiento.
+     *
+     * @param filtro Filtro de tipos de procedimiento
+     * @param lang   Código de idioma
+     * @return Listado de TiposProcedimiento
+     * @throws ValidationException Manejo de excepciones
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/")
+    @Operation(operationId = "listarTiposProcedimiento", summary = "Lista de tipos de procedimiento", description = "Lista todos los tipos de procedimiento disponibles")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoProcedimiento.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response listarTiposProcedimiento(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro: " + FiltroTipoProcedimiento.SAMPLE, name = "filtro", content = @Content(example = FiltroTipoProcedimiento.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTipoProcedimiento.class))) FiltroTipoProcedimiento filtro) throws ValidationException {
 
-		if (filtro == null) {
-			filtro = new FiltroTipoProcedimiento();
-		}
+        Instant start = Instant.now();
+        if (filtro == null) {
+            filtro = new FiltroTipoProcedimiento();
+        }
 
-		TipoProcedimientoFiltro fg = filtro.toTipoProcedimientoFiltro();
+        TipoProcedimientoFiltro fg = filtro.toTipoProcedimientoFiltro();
 
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else if(filtro.getIdEntidad() != null) {
-			EntidadFiltro filtroEntidad = new EntidadFiltro();
-			filtroEntidad.setCodigo(filtro.getIdEntidad());
-			Pagina<EntidadDTO> resultadoBusqueda = entidadService.findByFiltroRest(filtroEntidad);
-			if(resultadoBusqueda.getTotal() > 0 && resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest() != null && !resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest().isEmpty()) {
-				fg.setIdioma(resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest());
-			} else {
-				fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-			}
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else if (filtro.getIdEntidad() != null) {
+            EntidadFiltro filtroEntidad = new EntidadFiltro();
+            filtroEntidad.setCodigo(filtro.getIdEntidad());
+            Pagina<EntidadDTO> resultadoBusqueda = entidadService.findByFiltroRest(filtroEntidad);
+            if (resultadoBusqueda.getTotal() > 0 && resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest() != null && !resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest().isEmpty()) {
+                fg.setIdioma(resultadoBusqueda.getItems().get(0).getIdiomaDefectoRest());
+            } else {
+                fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+            }
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		// si no vienen los filtros se completan con los datos por defecto
-		if(filtro.getFiltroPaginacion() != null) {
-			fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
-			fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
-		}
+        // si no vienen los filtros se completan con los datos por defecto
+        if (filtro.getFiltroPaginacion() != null) {
+            fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
+            fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	/**
-	 * Para obtener el idioma.
-	 *
-	 * @param idioma
-	 * @param id
-	 * @return
-	 * @throws Exception
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({ MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/{codigo}")
-	@Operation(operationId = "getTipoProcedimiento", summary = "Obtiene un tipo de procedimiento", description = "Obtiene el tipo de procedimiento con el id(código) indicado")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoProcedimiento.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response getTipoProcedimiento(
-			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-			@Parameter(description = "Código de tipo de procedimiento", required = true, name = "codigo", in = ParameterIn.PATH) @PathParam("codigo") final String codigo)
-			throws Exception, ValidationException {
+    /**
+     * Para obtener el TipoProcedimiento.
+     *
+     * @param lang   Código de idioma
+     * @param codigo Código del tipo de procedimiento
+     * @return TipoProcedimiento
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/{codigo}")
+    @Operation(operationId = "getTipoProcedimiento", summary = "Obtiene un tipo de procedimiento", description = "Obtiene el tipo de procedimiento con el id(código) indicado")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoProcedimiento.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response getTipoProcedimiento(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @Parameter(description = "Código de tipo de procedimiento", required = true, name = "codigo", in = ParameterIn.PATH) @PathParam("codigo") final String codigo) {
 
-		TipoProcedimientoFiltro fg = new TipoProcedimientoFiltro();
-		fg.setCodigo(new Long(codigo));
+        Instant start = Instant.now();
+        TipoProcedimientoFiltro fg = new TipoProcedimientoFiltro();
+        fg.setCodigo(Long.valueOf(codigo));
 
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	private RespuestaTipoProcedimiento getRespuesta(TipoProcedimientoFiltro fg) throws DelegateException {
-		Pagina<TipoProcedimientoDTO> resultadoBusqueda = tipoProcedimientoService.findByFiltroRest(fg);
+    private RespuestaTipoProcedimiento getRespuesta(TipoProcedimientoFiltro fg, Instant start) {
+        Pagina<TipoProcedimientoDTO> resultadoBusqueda = tipoProcedimientoService.findByFiltroRest(fg);
 
-		List<TipoProcedimiento> lista = new ArrayList<TipoProcedimiento>();
-		TipoProcedimiento elemento = null;
+        List<TipoProcedimiento> lista = new ArrayList<>();
+        TipoProcedimiento elemento;
 
-		for (TipoProcedimientoDTO nodo : resultadoBusqueda.getItems()) {
-			elemento = new TipoProcedimiento(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), fg.getIdioma(), true);
-			lista.add(elemento);
-		}
+        for (TipoProcedimientoDTO nodo : resultadoBusqueda.getItems()) {
+            elemento = new TipoProcedimiento(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), fg.getIdioma(), true);
+            lista.add(elemento);
+        }
 
-		return new RespuestaTipoProcedimiento(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()),
-				resultadoBusqueda.getTotal(), lista);
-	}
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
+
+        return new RespuestaTipoProcedimiento(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), resultadoBusqueda.getTotal(), lista, tiempoMiliSegundos);
+    }
 }
