@@ -1,22 +1,16 @@
 package es.caib.rolsac2.rest.api.externa.v1.services;
 
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.ejb.EJB;
-import javax.validation.ValidationException;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-
-import es.caib.rolsac2.api.externa.v1.exception.DelegateException;
-import es.caib.rolsac2.api.externa.v1.exception.ExcepcionAplicacion;
+import es.caib.rolsac2.api.externa.v1.model.TipoPublicoObjetivo;
+import es.caib.rolsac2.api.externa.v1.model.filters.FiltroTipoPublicoObjetivo;
 import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaError;
+import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaTipoPublicoObjetivo;
+import es.caib.rolsac2.api.externa.v1.utils.Constantes;
+import es.caib.rolsac2.service.facade.MaestrasSupServiceFacade;
+import es.caib.rolsac2.service.facade.SystemServiceFacade;
+import es.caib.rolsac2.service.model.Pagina;
+import es.caib.rolsac2.service.model.TipoPublicoObjetivoDTO;
+import es.caib.rolsac2.service.model.filtro.TipoPublicoObjetivoFiltro;
+import es.caib.rolsac2.service.model.types.TypePropiedadConfiguracion;
 import org.eclipse.microprofile.openapi.annotations.Operation;
 import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
@@ -26,108 +20,105 @@ import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
 import org.eclipse.microprofile.openapi.annotations.tags.Tag;
 
-import es.caib.rolsac2.api.externa.v1.model.TipoPublicoObjetivo;
-import es.caib.rolsac2.api.externa.v1.model.filters.FiltroTipoPublicoObjetivo;
-import es.caib.rolsac2.api.externa.v1.model.respuestas.RespuestaTipoPublicoObjetivo;
-import es.caib.rolsac2.api.externa.v1.utils.Constantes;
-import es.caib.rolsac2.service.facade.MaestrasSupServiceFacade;
-import es.caib.rolsac2.service.facade.SystemServiceFacade;
-import es.caib.rolsac2.service.model.Pagina;
-import es.caib.rolsac2.service.model.TipoPublicoObjetivoDTO;
-import es.caib.rolsac2.service.model.filtro.TipoPublicoObjetivoFiltro;
-import es.caib.rolsac2.service.model.types.TypePropiedadConfiguracion;
+import javax.ejb.EJB;
+import javax.validation.ValidationException;
+import javax.ws.rs.*;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
 
 @Path(Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_PUBLICO)
 @Tag(description = Constantes.API_VERSION_BARRA + Constantes.ENTIDAD_PUBLICO, name = Constantes.ENTIDAD_PUBLICO)
 public class TipoPublicoObjetivoResource {
 
-	@EJB
-	private MaestrasSupServiceFacade tipoPublicoObjetivoService;
+    @EJB
+    MaestrasSupServiceFacade tipoPublicoObjetivoService;
 
-	@EJB
-	private SystemServiceFacade systemService;
+    @EJB
+    SystemServiceFacade systemService;
 
-	/**
-	 * Listado de TiposPublicoObjetivo.
-	 *
-	 * @return
-	 * @throws DelegateException
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({MediaType.APPLICATION_JSON , MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/")
-	@Operation(operationId = "listarTiposPublicoObjetivo", summary = "Lista de tipos de publico objetivo SIA", description = "Lista todos los tipos de publico objetivo SIA disponibles")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoPublicoObjetivo.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response listarTiposPublicoObjetivo(
-			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-			@RequestBody(description = "Filtro: " + FiltroTipoPublicoObjetivo.SAMPLE, name = "filtro", content = @Content(example = FiltroTipoPublicoObjetivo.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTipoPublicoObjetivo.class))) FiltroTipoPublicoObjetivo filtro)
-			throws DelegateException, ExcepcionAplicacion, ValidationException {
+    /**
+     * Listado de TiposPublicoObjetivo.
+     *
+     * @param lang   Código de idioma
+     * @param filtro Filtro de tipos de publico objetivo
+     * @return Listado de TiposPublicoObjetivo
+     * @throws ValidationException Manejo de excepciones
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_JSON, MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/")
+    @Operation(operationId = "listarTiposPublicoObjetivo", summary = "Lista de tipos de publico objetivo SIA", description = "Lista todos los tipos de publico objetivo SIA disponibles")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoPublicoObjetivo.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response listarTiposPublicoObjetivo(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @RequestBody(description = "Filtro: " + FiltroTipoPublicoObjetivo.SAMPLE, name = "filtro", content = @Content(example = FiltroTipoPublicoObjetivo.SAMPLE_JSON, mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = FiltroTipoPublicoObjetivo.class))) FiltroTipoPublicoObjetivo filtro) throws ValidationException {
 
-		if (filtro == null) {
-			filtro = new FiltroTipoPublicoObjetivo();
-		}
+        Instant start = Instant.now();
+        if (filtro == null) {
+            filtro = new FiltroTipoPublicoObjetivo();
+        }
 
-		TipoPublicoObjetivoFiltro fg = filtro.toTipoPublicoObjetivoFiltro();
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        TipoPublicoObjetivoFiltro fg = filtro.toTipoPublicoObjetivoFiltro();
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		// si no vienen los filtros se completan con los datos por defecto
-		if(filtro.getFiltroPaginacion() != null) {
-			fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
-			fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
-		}
+        // si no vienen los filtros se completan con los datos por defecto
+        if (filtro.getFiltroPaginacion() != null) {
+            fg.setPaginaTamanyo(filtro.getFiltroPaginacion().getSize());
+            fg.setPaginaFirst(filtro.getFiltroPaginacion().getPage());
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	/**
-	 * Para obtener el idioma.
-	 *
-	 * @param idioma
-	 * @param id
-	 * @return
-	 * @throws Exception
-	 */
-	@Produces({ MediaType.APPLICATION_JSON })
-	@POST
-	@Consumes({ MediaType.APPLICATION_FORM_URLENCODED })
-	@Path("/{codigo}")
-	@Operation(operationId = "getTipoPublicoObjetivo", summary = "Obtiene un tipo de publico objetivo SIA", description = "Obtiene el tipo de publico objetivo SIA con el id(código) indicado")
-	@APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoPublicoObjetivo.class)))
-	@APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
-	public Response getTipoPublicoObjetivo(
-			@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang,
-			@Parameter(description = "Código de tipo de publico objetivo SIA", required = true, name = "codigo", in = ParameterIn.PATH) @PathParam("codigo") final String codigo)
-			throws Exception, ValidationException {
+    /**
+     * Para obtener el tiop publico objetivo.
+     *
+     * @param lang   Código de idioma
+     * @param codigo Código del tipo de publico objetivo
+     * @return TipoPublicoObjetivo
+     */
+    @Produces({MediaType.APPLICATION_JSON})
+    @POST
+    @Consumes({MediaType.APPLICATION_FORM_URLENCODED})
+    @Path("/{codigo}")
+    @Operation(operationId = "getTipoPublicoObjetivo", summary = "Obtiene un tipo de publico objetivo SIA", description = "Obtiene el tipo de publico objetivo SIA con el id(código) indicado")
+    @APIResponse(responseCode = "200", description = Constantes.MSJ_200_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaTipoPublicoObjetivo.class)))
+    @APIResponse(responseCode = "400", description = Constantes.MSJ_400_GENERICO, content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RespuestaError.class)))
+    public Response getTipoPublicoObjetivo(@Parameter(description = "Código de idioma", name = "lang", in = ParameterIn.QUERY) @QueryParam("lang") final String lang, @Parameter(description = "Código de tipo de publico objetivo SIA", required = true, name = "codigo", in = ParameterIn.PATH) @PathParam("codigo") final String codigo) {
 
-		TipoPublicoObjetivoFiltro fg = new TipoPublicoObjetivoFiltro();
-		fg.setCodigo(new Long(codigo));
-		if (lang != null) {
-			fg.setIdioma(lang);
-		} else {
-			fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
-		}
+        Instant start = Instant.now();
+        TipoPublicoObjetivoFiltro fg = new TipoPublicoObjetivoFiltro();
+        fg.setCodigo(Long.valueOf(codigo));
+        if (lang != null) {
+            fg.setIdioma(lang);
+        } else {
+            fg.setIdioma(systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.IDIOMA_DEFECTO));
+        }
 
-		return Response.ok(getRespuesta(fg), MediaType.APPLICATION_JSON).build();
-	}
+        return Response.ok(getRespuesta(fg, start), MediaType.APPLICATION_JSON).build();
+    }
 
-	private RespuestaTipoPublicoObjetivo getRespuesta(TipoPublicoObjetivoFiltro fg) throws DelegateException {
-		Pagina<TipoPublicoObjetivoDTO> resultadoBusqueda = tipoPublicoObjetivoService.findByFiltroRest(fg);
+    private RespuestaTipoPublicoObjetivo getRespuesta(TipoPublicoObjetivoFiltro fg, Instant start) {
+        Pagina<TipoPublicoObjetivoDTO> resultadoBusqueda = tipoPublicoObjetivoService.findByFiltroRest(fg);
 
-		List<TipoPublicoObjetivo> lista = new ArrayList<TipoPublicoObjetivo>();
-		TipoPublicoObjetivo elemento = null;
+        List<TipoPublicoObjetivo> lista = new ArrayList<>();
+        TipoPublicoObjetivo elemento;
 
-		for (TipoPublicoObjetivoDTO nodo : resultadoBusqueda.getItems()) {
-			elemento = new TipoPublicoObjetivo(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), fg.getIdioma(), true);
-			lista.add(elemento);
-		}
+        for (TipoPublicoObjetivoDTO nodo : resultadoBusqueda.getItems()) {
+            elemento = new TipoPublicoObjetivo(nodo, systemService.obtenerPropiedadConfiguracion(TypePropiedadConfiguracion.URL_BASE), fg.getIdioma(), true);
+            lista.add(elemento);
+        }
+        Instant finish = Instant.now();
+        long tiempoMiliSegundos = Duration.between(start, finish).toMillis();
 
-		return new RespuestaTipoPublicoObjetivo(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()),
-				resultadoBusqueda.getTotal(), lista);
-	}
+        return new RespuestaTipoPublicoObjetivo(Response.Status.OK.getStatusCode() + "", Constantes.mensaje200(lista.size()), resultadoBusqueda.getTotal(), lista, tiempoMiliSegundos);
+    }
 }
